--- a/Views/ScenarioWindow.xaml
+++ b/Views/ScenarioWindow.xaml
@@ -56,53 +56,59 @@
 
 		<!--collections-->
 		<Border  Grid.Row="1" Style="{StaticResource callout}" Margin="5">
-			<StackPanel>
-				<TextBlock Text="Enable these Collections:" Style="{StaticResource Heading}"/>
-				<Grid Margin="0,5,0,10">
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="auto"/>
-						<ColumnDefinition Width="auto"/>
-						<ColumnDefinition Width="auto"/>
-					</Grid.ColumnDefinitions>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="*"/>
-						<RowDefinition Height="*"/>
-					</Grid.RowDefinitions>
+			<StackPanel Orientation="Horizontal">
+				<StackPanel>
+					<TextBlock Text="Enable these Collections:" Style="{StaticResource Heading}"/>
+					<Grid Margin="0,5,0,10">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="auto"/>
+							<ColumnDefinition Width="auto"/>
+							<ColumnDefinition Width="auto"/>
+						</Grid.ColumnDefinitions>
+						<Grid.RowDefinitions>
+							<RowDefinition Height="*"/>
+							<RowDefinition Height="*"/>
+						</Grid.RowDefinitions>
 
-					<!--Core Set-->
-					<Rectangle Grid.Row="0" Grid.Column="0" Fill="DarkGreen" />
-					<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
-						<TextBlock Text="r" Foreground="White" FontSize="20" FontStyle="Italic" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-						<CheckBox Click="collection_Click" x:Name="coreSetCB" Content="Core Set" FontWeight="Bold" FontStyle="Italic" Foreground="White" Padding="0,0,5,0" IsEnabled="False" IsChecked="True"/>
-					</StackPanel>
-					<Rectangle Grid.Row="0" Grid.Column="1" Fill="Black" />
-					<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
-						<TextBlock Text="p" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-						<CheckBox Click="collection_Click" x:Name="shadowedPathsCB" Content="Shadowed Paths" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
-					</StackPanel>
-					<Rectangle Grid.Row="0" Grid.Column="2" Fill="DarkRed" />
-					<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="2">
-						<TextBlock Text="w" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-						<CheckBox Click="collection_Click" x:Name="spreadingWarCB" Content="Spreading War" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
-					</StackPanel>
+						<!--Core Set-->
+						<Rectangle Grid.Row="0" Grid.Column="0" Fill="DarkGreen" />
+						<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
+							<TextBlock Text="r" Foreground="White" FontSize="20" FontStyle="Italic" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+							<CheckBox Click="collection_Click" x:Name="coreSetCB" Content="Core Set" FontWeight="Bold" FontStyle="Italic" Foreground="White" Padding="0,0,5,0" IsEnabled="False" IsChecked="True"/>
+						</StackPanel>
+						<Rectangle Grid.Row="0" Grid.Column="1" Fill="Black" />
+						<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
+							<TextBlock Text="p" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+							<CheckBox Click="collection_Click" x:Name="shadowedPathsCB" Content="Shadowed Paths" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+						</StackPanel>
+						<Rectangle Grid.Row="0" Grid.Column="2" Fill="DarkRed" />
+						<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="2">
+							<TextBlock Text="w" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+							<CheckBox Click="collection_Click" x:Name="spreadingWarCB" Content="Spreading War" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+						</StackPanel>
 
-					<Rectangle Grid.Row="1" Grid.Column="0" Fill="SaddleBrown" />
-					<StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0">
-						<TextBlock Text="v" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-						<CheckBox Click="collection_Click" x:Name="villainsOfEriadorCB" Content="Villains of Eriador" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
-					</StackPanel>
-					<Rectangle Grid.Row="1" Grid.Column="1" Fill="Purple" />
-					<StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
-						<TextBlock Text="d" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-						<CheckBox Click="collection_Click" x:Name="dwellersInDarknessCB" Content="Dwellers in Darkness" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
-					</StackPanel>
-					<Rectangle Grid.Row="1" Grid.Column="2" Fill="YellowGreen" />
-					<StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="2">
-						<TextBlock Text="c" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-						<CheckBox Click="collection_Click" x:Name="scourgesOfTheWastesCB" Content="Scourges of the Wastes" FontWeight="Bold" Foreground="White" Padding="0,0,5,0">
-						</CheckBox>
-					</StackPanel>
-				</Grid>
+						<Rectangle Grid.Row="1" Grid.Column="0" Fill="SaddleBrown" />
+						<StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0">
+							<TextBlock Text="v" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+							<CheckBox Click="collection_Click" x:Name="villainsOfEriadorCB" Content="Villains of Eriador" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+						</StackPanel>
+						<Rectangle Grid.Row="1" Grid.Column="1" Fill="Purple" />
+						<StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
+							<TextBlock Text="d" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+							<CheckBox Click="collection_Click" x:Name="dwellersInDarknessCB" Content="Dwellers in Darkness" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+						</StackPanel>
+						<Rectangle Grid.Row="1" Grid.Column="2" Fill="YellowGreen" />
+						<StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="2">
+							<TextBlock Text="c" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+							<CheckBox Click="collection_Click" x:Name="scourgesOfTheWastesCB" Content="Scourges of the Wastes" FontWeight="Bold" Foreground="White" Padding="0,0,5,0">
+							</CheckBox>
+						</StackPanel>
+					</Grid>
+				</StackPanel>
+				<StackPanel Orientation="Vertical" Margin="90,0,0,0">
+					<TextBlock Text="Scenario Cover Image:" Style="{StaticResource Heading}"/>
+					<Button x:Name="imageBtn" Content="Choose Cover Image..." Background="DodgerBlue" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Left" Click="imageBtn_Click" Height="36" FontWeight="Bold" FontSize="14" Margin="0,8,0,0"/>
+				</StackPanel>
 			</StackPanel>
 		</Border>
 		
