--- a/Views/CampaignWindow.xaml
+++ b/Views/CampaignWindow.xaml
@@ -19,7 +19,7 @@
 					<StackPanel>
 						<Grid>
 							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="*"/>
+								<ColumnDefinition Width="595"/>
 								<ColumnDefinition Width="auto"/>
 							</Grid.ColumnDefinitions>
 
@@ -32,22 +32,33 @@
 							<Button x:Name="openExplorer" Grid.Column="1" Content="Open Project Folder..." VerticalAlignment="Center" Background="DodgerBlue" Foreground="White" Height="44" FontWeight="Bold" FontSize="14" Click="openExplorer_Click"/>
 						</Grid>
 
-						<TextBlock Style="{StaticResource Heading}" Text="Campaign Scenarios" Margin="0,5,0,0"/>
-
 						<StackPanel Orientation="Horizontal">
-							<Button x:Name="createNew" Background="DodgerBlue"  HorizontalAlignment="Left" Margin="0,5,0,0" Click="createNew_Click" Height="44">
-								<StackPanel Orientation="Horizontal" Margin="5,0">
-									<TextBlock Text="Create And Add New Scenario..." Style="{StaticResource Heading}" VerticalAlignment="Center" Margin="0,0,5,0"/>
-									<Image Source="/JiME;component/Assets/add2.png" Height="24"/>
-								</StackPanel>
-							</Button>
+							<StackPanel Orientation="Vertical">
+								<TextBlock Style="{StaticResource Heading}" Text="Campaign Scenarios" Margin="0,5,0,0"/>
 
-							<Button x:Name="addExisting" Background="DodgerBlue"  HorizontalAlignment="Left" Margin="10,5,0,0" Click="addExisting_Click" Height="44">
-								<StackPanel Orientation="Horizontal" Margin="5,0">
-									<TextBlock Text="Add Existing Scenario..." Style="{StaticResource Heading}" VerticalAlignment="Center" Margin="0,0,5,0"/>
-									<Image Source="/JiME;component/Assets/addpage.png" Height="24"/>
+								<StackPanel Orientation="Horizontal">
+									<Button x:Name="createNew" Background="DodgerBlue"  HorizontalAlignment="Left" Margin="0,5,0,0" Click="createNew_Click" Height="44">
+										<StackPanel Orientation="Horizontal" Margin="5,0">
+											<TextBlock Text="Create And Add New Scenario..." Style="{StaticResource Heading}" VerticalAlignment="Center" Margin="0,0,5,0"/>
+											<Image Source="/JiME;component/Assets/add2.png" Height="24"/>
+										</StackPanel>
+									</Button>
+
+									<Button x:Name="addExisting" Background="DodgerBlue"  HorizontalAlignment="Left" Margin="10,5,0,0" Click="addExisting_Click" Height="44">
+										<StackPanel Orientation="Horizontal" Margin="5,0">
+											<TextBlock Text="Add Existing Scenario..." Style="{StaticResource Heading}" VerticalAlignment="Center" Margin="0,0,5,0"/>
+											<Image Source="/JiME;component/Assets/addpage.png" Height="24"/>
+										</StackPanel>
+									</Button>
 								</StackPanel>
-							</Button>
+							</StackPanel>
+
+							<StackPanel Orientation="Vertical">
+								<StackPanel Orientation="Vertical" Margin="120,5,0,0">
+									<TextBlock Text="Scenario Cover Image:" Style="{StaticResource Heading}" Margin="0,0,5,0" VerticalAlignment="Bottom"/>
+									<Button x:Name="imageBtn" Content="Choose Cover Image..." Background="DodgerBlue" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Left" Click="imageBtn_Click" Height="44" FontWeight="Bold" FontSize="14" Margin="0,5,0,0"/>
+								</StackPanel>
+							</StackPanel>
 						</StackPanel>
 
 						<TextBlock Text="When creating a new Scenario, hold down the CONTROL key to also open the Scenario in the Editor." Style="{StaticResource SubText}" Margin="0,5,0,0"/>
