--- a/Views/TileEditorWindow.xaml
+++ b/Views/TileEditorWindow.xaml
@@ -195,9 +195,10 @@
 
 					<StackPanel Orientation="Vertical" VerticalAlignment="Center">
 						<StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="10,0,0,0">
-							<TextBlock Style="{StaticResource Heading}" Text="Add Up To 5 Tiles" Margin="0,0,40,0"/>
-							<TextBlock Style="{StaticResource Heading}" Text="Rotate: Page Up/Page Down/Scroll Wheel" Margin="40,0"/>
-							<TextBlock Style="{StaticResource Heading}" Text="Remove Selected Tile: Del"  Margin="40,0"/>
+							<TextBlock Style="{StaticResource Heading}" Text="Add Up To 5 Tiles" Margin="0,0,20,0"/>
+							<TextBlock Style="{StaticResource Heading}" Text="Remove Tile: Delete"  Margin="20,0"/>
+							<TextBlock Style="{StaticResource Heading}" Text="Rotate: Page Up/Page Down/Scroll Wheel" Margin="20,0"/>
+							<TextBlock Style="{StaticResource Heading}" Text="Nudge: Arrow Keys" Margin="20,0"/>
 							<TextBlock Style="{StaticResource Heading}" Text="Edit Tokens: Double-Click Tile" />
 						</StackPanel>
 						<StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="10,20,0,0" Visibility="Collapsed">
