--- a/ProjectWindow.xaml
+++ b/ProjectWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JiME"
         mc:Ignorable="d"
-        Title="Your Journey" Height="450" Width="800" Background="{StaticResource bgColor}" WindowStyle="None" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" MouseDown="Window_MouseDown">
+        Title="Your Journey" Height="480" Width="800" Background="{StaticResource bgColor}" WindowStyle="None" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" MouseDown="Window_MouseDown">
 
 	<Window.Resources>
 		<Style TargetType="ScrollBar">
@@ -110,7 +110,30 @@
 					<TextBlock Grid.Column="1" Grid.Row="1" Text="Create a new Standalone Scenario that is not a part of a Campaign." TextWrapping="Wrap" Style="{StaticResource SubText}"/>
 				</Grid>
 			</Button>
-		</StackPanel>
+
+            <StackPanel Orientation="Vertical"  Margin="00" >
+                <Button x:Name="randomScenarioButton" Click="RandomScenarioButton_Click">
+                    <Grid Margin="0,10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                        </Grid.RowDefinitions>
+
+                        <Image Grid.RowSpan="2" Source="Assets/standalone.png" Width="40" Margin="0,0,10,0"/>
+
+                        <TextBlock Grid.Column="1" Text="New Random Scenario" Style="{StaticResource ButtonHeading}" />
+
+                        <TextBlock Grid.Column="1" Grid.Row="1" Text="Create a new Random Scenario that is not a part of a Campaign." TextWrapping="Wrap" Style="{StaticResource SubText}"/>
+
+                    </Grid>
+                </Button>
+                <ComboBox Name="generators" Margin="70,0,20,0" /> <!-- TODO: Very ugly here, should be inside the button but that caused click priority problems -->
+            </StackPanel>
+        </StackPanel>
 
 		<Grid Grid.Column="1" Grid.Row="3">
 			<Grid.ColumnDefinitions>
