--- a/Views/ProceduralGeneratorWindow.xaml
+++ b/Views/ProceduralGeneratorWindow.xaml
@@ -41,15 +41,15 @@
                 <StackPanel Orientation="Vertical">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Style="{StaticResource Heading}" Text="Random Seed:" MinWidth="100" />
-                        <TextBox x:Name="seedTB" Text="{Binding randomSeed, UpdateSourceTrigger=PropertyChanged}" Margin="10,0" MinWidth="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <TextBox x:Name="seedTB" Text="{Binding Seed}" Margin="10,0" MinWidth="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
                         <TextBlock Style="{StaticResource Heading}" Text="Archetype"  MinWidth="100"/>
-                        <ComboBox x:Name="archetypeCB" Text="{Binding randomSeed, UpdateSourceTrigger=PropertyChanged}" Margin="10,0" MinWidth="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <ComboBox x:Name="archetypeCB" Margin="10,0" MinWidth="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
                         <TextBlock Style="{StaticResource Heading}" Text="Template:" MinWidth="100" />
-                        <ComboBox x:Name="templateCB" Text="{Binding randomSeed, UpdateSourceTrigger=PropertyChanged}" Margin="10,0" MinWidth="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <ComboBox x:Name="templateCB" Margin="10,0" MinWidth="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     </StackPanel>
                 </StackPanel>
 
@@ -75,33 +75,39 @@
                             <Rectangle Grid.Row="0" Grid.Column="0" Fill="DarkGreen" />
                             <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
                                 <TextBlock Text="r" Foreground="White" FontSize="20" FontStyle="Italic" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-                                <CheckBox Click="collection_Click" x:Name="coreSetCB" Content="Core Set" FontWeight="Bold" FontStyle="Italic" Foreground="White" Padding="0,0,5,0" IsEnabled="False" IsChecked="True"/>
-                            </StackPanel>
-                            <Rectangle Grid.Row="0" Grid.Column="1" Fill="Black" />
-                            <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
-                                <TextBlock Text="p" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-                                <CheckBox Click="collection_Click" x:Name="shadowedPathsCB" Content="Shadowed Paths" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
-                            </StackPanel>
-                            <Rectangle Grid.Row="1" Grid.Column="0" Fill="DarkRed" />
-                            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0">
-                                <TextBlock Text="w" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-                                <CheckBox Click="collection_Click" x:Name="spreadingWarCB" Content="Spreading War" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+                                <CheckBox x:Name="coreSetCB" Content="Core Set" FontWeight="Bold" FontStyle="Italic" Foreground="White" Padding="0,0,5,0" IsEnabled="False" IsChecked="True"/>
                             </StackPanel>
 
-                            <Rectangle Grid.Row="1" Grid.Column="1" Fill="SaddleBrown" />
-                            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
+                            <Rectangle Grid.Row="0" Grid.Column="1" Fill="SaddleBrown" />
+                            <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
                                 <TextBlock Text="v" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-                                <CheckBox Click="collection_Click" x:Name="villainsOfEriadorCB" Content="Villains of Eriador" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+                                <CheckBox x:Name="villainsOfEriadorCB" Content="Villains of Eriador" IsChecked="{Binding Has_VILLAINS_OF_ERIADOR}" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
                             </StackPanel>
-                            <Rectangle Grid.Row="2" Grid.Column="0" Fill="Purple" />
-                            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0">
+
+                            <Rectangle Grid.Row="1" Grid.Column="0" Fill="Black" />
+                            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0">
+                                <TextBlock Text="p" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+                                <CheckBox x:Name="shadowedPathsCB" Content="Shadowed Paths" IsChecked="{Binding Has_SHADOWED_PATHS}" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+                            </StackPanel>
+
+                            <Rectangle Grid.Row="1" Grid.Column="1" Fill="Purple" />
+                            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
                                 <TextBlock Text="d" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-                                <CheckBox Click="collection_Click" x:Name="dwellersInDarknessCB" Content="Dwellers in Darkness" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+                                <CheckBox x:Name="dwellersInDarknessCB" Content="Dwellers in Darkness" IsChecked="{Binding Has_DWELLERS_IN_DARKNESS}" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
                             </StackPanel>
+
+                            <Rectangle Grid.Row="2" Grid.Column="0" Fill="DarkRed" />
+                            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0">
+                                <TextBlock Text="w" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+                                <CheckBox x:Name="spreadingWarCB" Content="Spreading War" IsChecked="{Binding Has_SPREADING_WAR}" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+                            </StackPanel>
+
+
+
                             <Rectangle Grid.Row="2" Grid.Column="1" Fill="YellowGreen" />
                             <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
                                 <TextBlock Text="c" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-                                <CheckBox Click="collection_Click" x:Name="scourgesOfTheWastesCB" Content="Scourges of the Wastes" FontWeight="Bold" Foreground="White" Padding="0,0,5,0">
+                                <CheckBox x:Name="scourgesOfTheWastesCB" Content="Scourges of the Wastes" IsChecked="{Binding Has_SCOURGES_OF_THE_WASTES}" FontWeight="Bold" Foreground="White" Padding="0,0,5,0">
                                 </CheckBox>
                             </StackPanel>
                         </Grid>
@@ -114,7 +120,7 @@
 		
 		<!--rewards-->
 		<Border  Grid.Row="2" Style="{StaticResource callout}" Margin="5">
-            <TextBlock Foreground="White" ><Run Text="TODO: Advanved settin"/><Run Text="g"/></TextBlock>
+            <TextBlock Foreground="White" ><Run Text="TODO: Advanced settin"/><Run Text="g"/></TextBlock>
         </Border>
 
 		<!--Footer-->
@@ -138,7 +144,7 @@
                         <Image Source="/JiME;component/Assets/save.png" Stretch="Uniform" Width="32" Margin="5"/>
                     </Button>
 
-                    <Button x:Name="okButton" Margin="0, 10, 10, 10" Background="MediumSeaGreen" Click="OkButton_Click" IsDefault="True" IsCancel="False" ToolTip="Take Scenario to Editor">
+                    <Button x:Name="okButton" Margin="0, 10, 10, 10" Background="MediumSeaGreen" IsDefault="True" IsCancel="False" ToolTip="Take Scenario to Editor">
                         <Image Source="/JiME;component/Assets/ok.png" Stretch="Uniform" Width="32" Margin="5"/>
                     </Button>
                 </WrapPanel>
