--- a/Views/CampaignWindow.xaml
+++ b/Views/CampaignWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JiME"
         mc:Ignorable="d"
-        Title="Campaign Manager - New Campaign" Width="800" Background="{StaticResource bgColor}" Style="{StaticResource DefaultWindow}" WindowStartupLocation="CenterScreen" ContentRendered="Window_ContentRendered">
+        Title="Campaign Manager - New Campaign" Width="845" Background="{StaticResource bgColor}" Style="{StaticResource DefaultWindow}" WindowStartupLocation="CenterScreen" ContentRendered="Window_ContentRendered">
 
 	<Grid>
 		<Grid.RowDefinitions>
@@ -19,17 +19,23 @@
 					<StackPanel>
 						<Grid>
 							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="595"/>
+								<ColumnDefinition Width="380"/>
+                                <ColumnDefinition Width="180"/>
 								<ColumnDefinition Width="auto"/>
 							</Grid.ColumnDefinitions>
 
 							<StackPanel>
 								<TextBlock Style="{StaticResource Heading}" Text="Campaign Name:"/>
 								<TextBlock Style="{StaticResource SubText}" Text="This is the name players will see in the Companion App."/>
-								<TextBox x:Name="campaignNameTB" Text="{Binding campaign.campaignName,UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource DefaultTextBox}" Margin="0,5" HorizontalAlignment="Left" Width="450"/>
+								<TextBox x:Name="campaignNameTB" Text="{Binding campaign.campaignName,UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource DefaultTextBox}" Margin="0,5" HorizontalAlignment="Left" Width="350"/>
 							</StackPanel>
 
-							<Button x:Name="openExplorer" Grid.Column="1" Content="Open Project Folder..." VerticalAlignment="Center" Background="DodgerBlue" Foreground="White" Height="44" FontWeight="Bold" FontSize="14" Click="openExplorer_Click"/>
+                            <StackPanel Orientation="Vertical" Grid.Column="1">
+                                <TextBlock Text="Campaign Cover Image:" Style="{StaticResource Heading}" Margin="0,0,5,0" VerticalAlignment="Bottom"/>
+                                <Button x:Name="imageBtn" Content="Choose Cover Image..." Background="DodgerBlue" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Left" Click="imageBtn_Click" Height="44" FontWeight="Bold" FontSize="14" Margin="0,5,0,0"/>
+                            </StackPanel>
+
+                            <Button x:Name="openExplorer" Grid.Column="2" Content="Open Project Folder..." VerticalAlignment="Bottom" Background="DodgerBlue" Foreground="White" Height="44" FontWeight="Bold" FontSize="14" Click="openExplorer_Click"/>
 						</Grid>
 
 						<StackPanel Orientation="Horizontal">
@@ -50,19 +56,19 @@
 											<Image Source="/JiME;component/Assets/addpage.png" Height="24"/>
 										</StackPanel>
 									</Button>
-								</StackPanel>
-							</StackPanel>
-
-							<StackPanel Orientation="Vertical">
-								<StackPanel Orientation="Vertical" Margin="120,5,0,0">
-									<TextBlock Text="Scenario Cover Image:" Style="{StaticResource Heading}" Margin="0,0,5,0" VerticalAlignment="Bottom"/>
-									<Button x:Name="imageBtn" Content="Choose Cover Image..." Background="DodgerBlue" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Left" Click="imageBtn_Click" Height="44" FontWeight="Bold" FontSize="14" Margin="0,5,0,0"/>
-								</StackPanel>
+                                    <Button x:Name="addGenerated" Background="DodgerBlue"  HorizontalAlignment="Left" Margin="10,5,0,0" Click="addGenerated_Click" Height="44">
+                                        <StackPanel Orientation="Horizontal" Margin="5,0">
+                                            <TextBlock Text="Add Procedurally Generated Scenario..." Style="{StaticResource Heading}" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                                            <Image Source="/JiME;component/Assets/dice.png" Height="24"/>
+                                        </StackPanel>
+                                    </Button>
+                                </StackPanel>
 							</StackPanel>
 						</StackPanel>
 
-						<TextBlock Text="When creating a new Scenario, hold down the CONTROL key to also open the Scenario in the Editor." Style="{StaticResource SubText}" Margin="0,5,0,0"/>
-						<TextBlock Style="{StaticResource SubText}" Margin="0,5,0,0" TextWrapping="Wrap">
+						<TextBlock Text="When creating a new Scenario, hold down the CONTROL key to also open the Scenario in the Editor (except for generated scenarios)." Style="{StaticResource SubText}" Margin="0,5,0,0"/>
+                        <TextBlock Text="Procedural generation opens up a dialog to fine tune generator parameters. You can edit the generated scenarios in the editor after saving. " Style="{StaticResource SubText}" Margin="0,5,0,0"/>
+                        <TextBlock Style="{StaticResource SubText}" Margin="0,5,0,0" TextWrapping="Wrap">
 							Removing a Scenario from the Campaign <Bold>DOES NOT DELETE ITS FILE</Bold>. The Scenario's file will be moved into the base Scenario folder (Documents\Your Journey). If you wish to <Bold>PERMANENTLY DELETE</Bold> the Scenario file, <Bold>hold down the CONTROL key while clicking the X button</Bold>. You will be asked to confirm your decision.
 						</TextBlock>
 
